--- a/toilet_overflow/Gemfile
+++ b/toilet_overflow/Gemfile
@@ -36,6 +36,7 @@ group :development, :test do
   gem 'faker'
   gem 'factory_girl_rails'
   gem 'rspec-rails'
+  gem 'shoulda-matchers'
 end
 
 group :development do
